dashboard right menu css changes

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #6af194; }
+  background: #6eac7a; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #d1223e; }
+  background: #3fe774; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #9cce8b; }
+  background: #2feec0; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #bb489e; }
+  background: #dc4771; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #cd7dea; }
+  background: #1b455e; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #3ebc2a; }
+  background: #90f44b; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #66ca59; }
+  background: #d3aa48; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #277ba7; }
+  background: #5e3567; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #267811; }
+  background: #3cf509; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #1fd4e5; }
+  background: #7cc26b; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #2c6f45; }
+  background: #ead566; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #66d1b3; }
+  background: #91ea55; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #bd3257; }
+  background: #cb010b; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #ed42cf; }
+  background: #c15741; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #32845b; }
+  background: #c9836a; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #712016; }
+  background: #a0c8ea; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #48b154; }
+  background: #53700d; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #d7cafb; }
+  background: #b3ad07; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #8014f0; }
+  background: #a30e45; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #67a2d6; }
+  background: #96bc98; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #76308c; }
+  background: #4cee18; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #3aaed6; }
+  background: #e37ebb; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #743b41; }
+  background: #14b309; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #a14919; }
+  background: #467277; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #3ebd3b; }
+  background: #07adb8; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #7bcff8; }
+  background: #1e37ed; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #731e1f; }
+  background: #102509; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #3bced6; }
+  background: #335975; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #380cc0; }
+  background: #2d711b; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #301fb5; }
+  background: #817278; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #5721ba; }
+  background: #3cca6b; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #a65f4f; }
+  background: #836ac7; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #5f17b8; }
+  background: #bb2d89; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #8143bf; }
+  background: #fed3e7; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #12bb36; }
+  background: #b91369; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #f0828d; }
+  background: #2276aa; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #f22062; }
+  background: #e9e3ba; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #97dc34; }
+  background: #25fbee; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #b1348b; }
+  background: #ec8eee; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #93f6a4; }
+  background: #5bf25f; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #7b4640; }
+  background: #e0f141; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #c885a3; }
+  background: #94557a; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #8e8e2a; }
+  background: #8f9019; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #d7d9e1; }
+  background: #a2bc77; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #628046; }
+  background: #6936c7; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #75da49; }
+  background: #4c90d2; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #96b776; }
+  background: #afe309; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #6e3843; }
+  background: #0291ad; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #2f79d5; }
+  background: #570c16; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #e7b6dc; }
+  background: #d76625; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #177dcb; }
+  background: #38c1c4; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #6b9ea4; }
+  background: #bf78fa; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #6276f5; }
+  background: #c84949; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #1fdb02; }
+  background: #dab54d; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #928628; }
+  background: #5df781; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #48a00f; }
+  background: #911fd1; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #442cef; }
+  background: #258a92; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #eefde2; }
+  background: #290dc5; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #422203; }
+  background: #c8cb20; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #b4c573; }
+  background: #24958d; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #f3dfa5; }
+  background: #6163e5; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #fb77fb; }
+  background: #ffbfb9; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #055591; }
+  background: #de48e2; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #8aa8a4; }
+  background: #30ec81; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #891d62; }
+  background: #057cbd; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #17ab54; }
+  background: #40c1de; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #9dac74; }
+  background: #9025a6; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #ca1ef6; }
+  background: #bbc832; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #8bc172; }
+  background: #4007a0; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #6f8d54; }
+  background: #bae432; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #856136; }
+  background: #4dc6be; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #57928e; }
+  background: #e0e2ae; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #214739; }
+  background: #3c5a68; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #fc5c66; }
+  background: #c674f4; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #1fa530; }
+  background: #f7a13c; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #1b2e85; }
+  background: #0f7c8a; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #d7902e; }
+  background: #31768d; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #f01be8; }
+  background: #2269f8; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #72c1ea; }
+  background: #357ca3; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #5191cd; }
+  background: #f368ce; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #0c5112; }
+  background: #1cbe09; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #66fb51; }
+  background: #c8dc88; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #5e6116; }
+  background: #57b893; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #02f973; }
+  background: #533026; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #433210; }
+  background: #ffcb07; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #2a7eaf; }
+  background: #21bd08; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #43cbb8; }
+  background: #174064; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #bf4a2f; }
+  background: #3b6a70; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #254fd3; }
+  background: #df2f8f; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #0fc0cf; }
+  background: #7392eb; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #dc8419; }
+  background: #39ba33; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #a47d5f; }
+  background: #9e3c39; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #822420; }
+  background: #bf8315; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #a2d292; }
+  background: #86898c; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #904a32; }
+  background: #a5ee97; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #90a22e; }
+  background: #aacc27; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #46f189; }
+  background: #2e6ed7; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #d79ac1; }
+  background: #c01a1a; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #503703; }
+  background: #f35b5b; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #17ea8d; }
+  background: #3a5f64; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10205,12 +10205,13 @@ table .bold-heading {
     margin-right: 10px; }
 
 .close-section img {
-  width: 20px; }
+  width: 30px; }
 
 .close-section {
   position: absolute;
-  left: -20px;
-  top: 0;
+  left: -30px;
+  top: 80px;
+  align-items: start;
   bottom: 0;
   margin: auto;
   display: flex; }
@@ -11416,6 +11417,11 @@ input:checked + .sliders:before {
 .dashboard-title-menu-dropdown a:nth-child(1) {
   border-bottom: 1px solid #a3a2a2;
   margin-bottom: 10px; }
+
+.close-section {
+  top: 80px !important;
+  align-items: start;
+  left: -30px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
