--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -849,3 +849,9 @@ input:checked+.sliders:before {
     border-bottom: 1px solid #a3a2a2;
     margin-bottom: 10px;
 }
+
+.close-section {
+    top: 80px !important;
+    align-items: start;
+    left: -30px;
+}
