dashboard css changes

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #6eac7a; }
+  background: #2ee12c; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #3fe774; }
+  background: #2826ac; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #2feec0; }
+  background: #7cd947; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #dc4771; }
+  background: #d5fbcb; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #1b455e; }
+  background: #b6864b; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #90f44b; }
+  background: #e19ce3; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #d3aa48; }
+  background: #5a5b24; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #5e3567; }
+  background: #a3c913; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #3cf509; }
+  background: #8b409a; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #7cc26b; }
+  background: #08afc8; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #ead566; }
+  background: #1dfda3; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #91ea55; }
+  background: #dbccd1; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #cb010b; }
+  background: #681f4b; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #c15741; }
+  background: #05fa20; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #c9836a; }
+  background: #1b2e28; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #a0c8ea; }
+  background: #0b1dd8; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #53700d; }
+  background: #f6e4c9; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #b3ad07; }
+  background: #327d1e; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #a30e45; }
+  background: #1840e5; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #96bc98; }
+  background: #fd39a2; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #4cee18; }
+  background: #f356b6; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #e37ebb; }
+  background: #6b1e61; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #14b309; }
+  background: #194bd8; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #467277; }
+  background: #2ddd9c; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #07adb8; }
+  background: #802368; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #1e37ed; }
+  background: #7399b5; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #102509; }
+  background: #48d8e5; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #335975; }
+  background: #b17fa7; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #2d711b; }
+  background: #9fca54; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #817278; }
+  background: #09ba80; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #3cca6b; }
+  background: #2c5d5d; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #836ac7; }
+  background: #c74f7e; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #bb2d89; }
+  background: #b6d1fb; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #fed3e7; }
+  background: #932d87; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #b91369; }
+  background: #6d263d; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #2276aa; }
+  background: #678ac6; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #e9e3ba; }
+  background: #ffad83; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #25fbee; }
+  background: #1f8ee7; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #ec8eee; }
+  background: #7e550c; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #5bf25f; }
+  background: #52c1b8; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #e0f141; }
+  background: #5d6e87; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #94557a; }
+  background: #4cb47b; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #8f9019; }
+  background: #27288f; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #a2bc77; }
+  background: #1fa3d2; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #6936c7; }
+  background: #46061b; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #4c90d2; }
+  background: #ef7604; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #afe309; }
+  background: #bf31ec; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #0291ad; }
+  background: #2cbd9b; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #570c16; }
+  background: #2fc47d; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #d76625; }
+  background: #bcbb15; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #38c1c4; }
+  background: #0b0109; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #bf78fa; }
+  background: #fac2a5; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #c84949; }
+  background: #7163ed; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #dab54d; }
+  background: #1ea186; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #5df781; }
+  background: #5f3865; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #911fd1; }
+  background: #c52628; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #258a92; }
+  background: #1bceb6; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #290dc5; }
+  background: #2d1464; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #c8cb20; }
+  background: #2c3e4a; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #24958d; }
+  background: #c433e4; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #6163e5; }
+  background: #ece6a1; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #ffbfb9; }
+  background: #17676d; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #de48e2; }
+  background: #9aeba3; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #30ec81; }
+  background: #72b50f; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #057cbd; }
+  background: #b6afe0; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #40c1de; }
+  background: #9cf8b5; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #9025a6; }
+  background: #46c51a; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #bbc832; }
+  background: #3e9d30; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #4007a0; }
+  background: #9006bc; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #bae432; }
+  background: #f5da5e; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #4dc6be; }
+  background: #2afcf1; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #e0e2ae; }
+  background: #67a208; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #3c5a68; }
+  background: #f015bd; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #c674f4; }
+  background: #ab551d; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #f7a13c; }
+  background: #e0068b; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #0f7c8a; }
+  background: #ea3262; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #31768d; }
+  background: #167562; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #2269f8; }
+  background: #ef0930; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #357ca3; }
+  background: #1b8c71; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #f368ce; }
+  background: #beeecf; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #1cbe09; }
+  background: #3c31bb; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #c8dc88; }
+  background: #9074e1; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #57b893; }
+  background: #c42c49; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #533026; }
+  background: #d2e541; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #ffcb07; }
+  background: #933617; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #21bd08; }
+  background: #dc1a19; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #174064; }
+  background: #b4eaf5; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #3b6a70; }
+  background: #12abe0; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #df2f8f; }
+  background: #52afa1; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #7392eb; }
+  background: #ec8d32; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #39ba33; }
+  background: #02264d; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #9e3c39; }
+  background: #a1d169; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #bf8315; }
+  background: #6b3cae; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #86898c; }
+  background: #2d54cf; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #a5ee97; }
+  background: #39f167; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #aacc27; }
+  background: #1472f8; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #2e6ed7; }
+  background: #f81a09; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #c01a1a; }
+  background: #6971f5; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #f35b5b; }
+  background: #2b562f; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #3a5f64; }
+  background: #8e12dd; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9225,9 +9225,9 @@ th {
     border-radius: 13px;
     padding: 10px;
     margin-right: 35px;
-    -webkit-box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.1);
     height: 75px; }
   .device-disclosure .device-box-main-text {
     font-size: 18px;
@@ -9433,9 +9433,9 @@ table .bold-heading {
 
 .widget-box {
   overflow: hidden;
-  -webkit-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2) !important;
-  -moz-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2) !important;
-  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2) !important;
+  -webkit-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.1) !important;
+  -moz-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.1) !important;
+  box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.1) !important;
   background: white;
   border-radius: 13px;
   display: flex;
@@ -9475,7 +9475,8 @@ table .bold-heading {
 
 .cycle-widget {
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  padding: 10px 20px; }
   .cycle-widget img {
     width: 230px; }
 
@@ -10859,7 +10860,7 @@ li.prev {
   vertical-align: top; }
 
 .LoginPanel .fieldsSection {
-    /*min-width: 320px;
+  /*min-width: 320px;
 	padding-left: 26px;*/
   display: inline-block;
   vertical-align: top; }
@@ -10920,8 +10921,8 @@ li.prev {
 .LoginPanel .fieldsBotSection input[type="checkbox"],
 .LoginPanel .login-pass-div input[type="checkbox"] {
   /*border: 1px solid #b9babd;
-  background: #fff;
-  width: 12px;*/
+    background: #fff;
+    width: 12px;*/
   display: none; }
 
 .remember {
@@ -11313,11 +11314,15 @@ input:checked + .sliders:before {
 .role-to-txt h2 {
   padding-left: 35px; }
 
-.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-logo {
+.modal-add-connections-wrapper
+.adding-adapter-modal-header
+.adapter-modal-logo {
   height: 55px !important;
   width: 55px !important; }
 
-.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-name {
+.modal-add-connections-wrapper
+.adding-adapter-modal-header
+.adapter-modal-name {
   font-size: 20px !important; }
 
 .modal-add-connections-wrapper input[type="text"] {
@@ -11402,9 +11407,6 @@ input:checked + .sliders:before {
 .user-analysis .heading-medium {
   font-size: 16px !important; }
 
-.dashboard-dropdown-menu {
-  margin-bottom: 30px; }
-
 .dashboard-title-menu-dropdown a {
   text-decoration: none !important;
   padding-top: 15px;
@@ -11417,11 +11419,6 @@ input:checked + .sliders:before {
 .dashboard-title-menu-dropdown a:nth-child(1) {
   border-bottom: 1px solid #a3a2a2;
   margin-bottom: 10px; }
-
-.close-section {
-  top: 80px !important;
-  align-items: start;
-  left: -30px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
@@ -11594,7 +11591,10 @@ input:checked + .sliders:before {
     justify-content: center; }
 
   .last-td-p {
-    padding-right: 15px; } }
+    padding-right: 15px; }
+
+  .dashboard-dropdown-menu {
+    margin-bottom: 30px; } }
 /*767 screen end here*/
 @media screen and (max-width: 767px) {
   .dashboard-container
