--- a/scss/_fahad-responsive.scss
+++ b/scss/_fahad-responsive.scss
@@ -223,6 +223,11 @@
     .last-td-p {
         padding-right: 15px;
     }
+
+    .dashboard-dropdown-menu {
+        margin-bottom: 30px;
+    }
+
 }
 
 /*767 screen end here*/
