--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -2078,9 +2078,9 @@ th {
     border-radius: 13px;
     padding: 10px;
     margin-right: 35px;
-    -webkit-box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.1);
     height: 75px;
   }
 
@@ -2388,9 +2388,9 @@ table .bold-heading {
 
 .widget-box {
   overflow: hidden;
-  -webkit-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2) !important;
-  -moz-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2) !important;
-  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2) !important;
+  -webkit-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.1) !important;
+  -moz-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.1) !important;
+  box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.1) !important;
   background: white;
   border-radius: 13px;
   display: flex;
@@ -2448,6 +2448,7 @@ table .bold-heading {
 .cycle-widget {
   display: flex;
   justify-content: center;
+  padding: 10px 20px;
 
   img {
     width: 230px;
