--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #2ee12c; }
+  background: #57a5d2; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #2826ac; }
+  background: #6878f7; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #7cd947; }
+  background: #b01f48; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #d5fbcb; }
+  background: #e776a1; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #b6864b; }
+  background: #756247; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #e19ce3; }
+  background: #cfd5b2; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #5a5b24; }
+  background: #7cf8a6; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #a3c913; }
+  background: #5a3566; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #8b409a; }
+  background: #a07ce0; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #08afc8; }
+  background: #7d8233; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #1dfda3; }
+  background: #6f0e30; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #dbccd1; }
+  background: #0a2368; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #681f4b; }
+  background: #0290d4; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #05fa20; }
+  background: #fb37a4; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #1b2e28; }
+  background: #370919; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #0b1dd8; }
+  background: #ccb444; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #f6e4c9; }
+  background: #b85e3c; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #327d1e; }
+  background: #100bc3; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #1840e5; }
+  background: #4115b1; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #fd39a2; }
+  background: #45a106; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #f356b6; }
+  background: #0da6fb; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #6b1e61; }
+  background: #ecb035; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #194bd8; }
+  background: #f487ab; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #2ddd9c; }
+  background: #0e0fa3; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #802368; }
+  background: #5eb4c0; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #7399b5; }
+  background: #4779eb; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #48d8e5; }
+  background: #38d03d; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #b17fa7; }
+  background: #a7138a; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #9fca54; }
+  background: #40a19f; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #09ba80; }
+  background: #94cb83; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #2c5d5d; }
+  background: #16f3c0; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #c74f7e; }
+  background: #eeca51; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #b6d1fb; }
+  background: #c10a71; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #932d87; }
+  background: #335257; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #6d263d; }
+  background: #6abbba; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #678ac6; }
+  background: #090a56; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #ffad83; }
+  background: #627a7f; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #1f8ee7; }
+  background: #66e68f; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #7e550c; }
+  background: #3ed2b8; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #52c1b8; }
+  background: #a3272b; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #5d6e87; }
+  background: #a1e7c5; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #4cb47b; }
+  background: #63f01e; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #27288f; }
+  background: #a309d7; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #1fa3d2; }
+  background: #13ed40; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #46061b; }
+  background: #6ab426; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #ef7604; }
+  background: #3b18b7; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #bf31ec; }
+  background: #5e16c2; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #2cbd9b; }
+  background: #4cf67e; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #2fc47d; }
+  background: #d589b4; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #bcbb15; }
+  background: #e0c025; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #0b0109; }
+  background: #bda3ee; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #fac2a5; }
+  background: #c64b73; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #7163ed; }
+  background: #f5e6c6; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #1ea186; }
+  background: #6167d2; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #5f3865; }
+  background: #512f52; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #c52628; }
+  background: #a6014f; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #1bceb6; }
+  background: #d9515f; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #2d1464; }
+  background: #e30d7d; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #2c3e4a; }
+  background: #cab223; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #c433e4; }
+  background: #1d91f5; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #ece6a1; }
+  background: #fba118; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #17676d; }
+  background: #d506c8; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #9aeba3; }
+  background: #bc7c34; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #72b50f; }
+  background: #b70249; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #b6afe0; }
+  background: #aab6ae; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #9cf8b5; }
+  background: #22f530; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #46c51a; }
+  background: #83b699; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #3e9d30; }
+  background: #ad9120; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #9006bc; }
+  background: #18e6ae; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #f5da5e; }
+  background: #72ccdf; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #2afcf1; }
+  background: #b829c5; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #67a208; }
+  background: #6bc2e7; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #f015bd; }
+  background: #895a69; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #ab551d; }
+  background: #fa2f40; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #e0068b; }
+  background: #95579b; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #ea3262; }
+  background: #9ee77c; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #167562; }
+  background: #6aac4d; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #ef0930; }
+  background: #6c3822; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #1b8c71; }
+  background: #6f6879; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #beeecf; }
+  background: #e0283c; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #3c31bb; }
+  background: #b7f890; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #9074e1; }
+  background: #b26a1b; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #c42c49; }
+  background: #5a569e; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #d2e541; }
+  background: #c097d7; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #933617; }
+  background: #46a2fb; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #dc1a19; }
+  background: #78f478; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #b4eaf5; }
+  background: #32a666; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #12abe0; }
+  background: #987789; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #52afa1; }
+  background: #13ece7; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #ec8d32; }
+  background: #6735cd; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #02264d; }
+  background: #d16cf4; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #a1d169; }
+  background: #2d9f81; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #6b3cae; }
+  background: #bf5b64; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #2d54cf; }
+  background: #ef0cfc; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #39f167; }
+  background: #d6225f; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #1472f8; }
+  background: #976bec; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #f81a09; }
+  background: #46c8da; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #6971f5; }
+  background: #9ff1e7; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #2b562f; }
+  background: #e0839e; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #8e12dd; }
+  background: #d816d4; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10117,7 +10117,7 @@ table .bold-heading {
   text-decoration: none;
   color: #4C4C4C; }
   .widget-add-module a:hover {
-    color: #4C4C4C; }
+    color: #4C4C4C !important; }
   .widget-add-module a img {
     margin-right: 10px; }
 
@@ -10206,12 +10206,13 @@ table .bold-heading {
     margin-right: 10px; }
 
 .close-section img {
-  width: 30px; }
+  width: 40px;
+  opacity: 0.8; }
 
 .close-section {
   position: absolute;
-  left: -30px;
-  top: 80px;
+  left: -39px;
+  top: 94px;
   align-items: start;
   bottom: 0;
   margin: auto;
@@ -11314,15 +11315,11 @@ input:checked + .sliders:before {
 .role-to-txt h2 {
   padding-left: 35px; }
 
-.modal-add-connections-wrapper
-.adding-adapter-modal-header
-.adapter-modal-logo {
+.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-logo {
   height: 55px !important;
   width: 55px !important; }
 
-.modal-add-connections-wrapper
-.adding-adapter-modal-header
-.adapter-modal-name {
+.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-name {
   font-size: 20px !important; }
 
 .modal-add-connections-wrapper input[type="text"] {
@@ -11419,6 +11416,144 @@ input:checked + .sliders:before {
 .dashboard-title-menu-dropdown a:nth-child(1) {
   border-bottom: 1px solid #a3a2a2;
   margin-bottom: 10px; }
+
+.dashboard-widget-container .widget-add-module {
+  width: auto !important;
+  display: inline-block; }
+
+.model-header-top {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #8c8c8c;
+  padding: 25px; }
+
+.query-wizard-exp-wrapper {
+  padding: 15px; }
+
+.query-wizard-exp-contents {
+  background: #f3f3f3;
+  padding: 20px;
+  border-radius: 15px; }
+
+.query-wizard-exp-contents .query-wizard-expension {
+  position: relative; }
+  .query-wizard-exp-contents .query-wizard-expension .exists-dropdown {
+    padding: 8px 10px !important; }
+  .query-wizard-exp-contents .query-wizard-expension .query-wizard-dropdown-large {
+    padding: 8px 10px !important; }
+  .query-wizard-exp-contents .query-wizard-expension .all-select {
+    padding: 8px 10px !important; }
+  .query-wizard-exp-contents .query-wizard-expension .dropdown-with-img-select img {
+    width: 34px !important; }
+
+.query-wizard-exp-contents .query-wizard-expension {
+  display: flex !important;
+  justify-content: space-between !important;
+  align-items: center !important;
+  margin-bottom: 30px; }
+  .query-wizard-exp-contents .query-wizard-expension .dropdown-with-img {
+    margin-left: 10px !important;
+    margin-right: 10px !important; }
+  .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn {
+    position: relative;
+    padding-left: 33px; }
+    .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn::after {
+      content: "";
+      width: 0;
+      height: 55px;
+      position: absolute;
+      border: 1px solid #776fff;
+      top: -53px;
+      left: 49px; }
+    .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn a {
+      color: #000000;
+      text-decoration: none;
+      font-size: 14px; }
+      .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn a span {
+        background: #776fff;
+        border-radius: 50%;
+        color: #fff;
+        padding: 2px 8px;
+        margin-left: 3px;
+        font-size: 23px; }
+  .query-wizard-exp-contents .query-wizard-expension .dropdown-with-img {
+    border-right: 1px solid #cccccc; }
+  .query-wizard-exp-contents .query-wizard-expension .fields-wrappter {
+    display: flex !important;
+    justify-content: space-between !important;
+    align-items: center !important; }
+    .query-wizard-exp-contents .query-wizard-expension .fields-wrappter::before {
+      content: "";
+      border-top: 2px solid #776fff;
+      position: absolute;
+      top: 50%;
+      margin-left: -3px;
+      top: 22px;
+      left: 55px;
+      width: 74%; }
+    .query-wizard-exp-contents .query-wizard-expension .fields-wrappter div {
+      z-index: 2; }
+    .query-wizard-exp-contents .query-wizard-expension .fields-wrappter .disabled-input {
+      background: #776fff;
+      border: 1px solid #776fff;
+      padding: 10px 20px;
+      color: #fff;
+      border-radius: 35px; }
+  .query-wizard-exp-contents .query-wizard-expension .add-fields-wrappter {
+    display: flex !important;
+    justify-content: space-between !important;
+    align-items: center !important; }
+    .query-wizard-exp-contents .query-wizard-expension .add-fields-wrappter::before {
+      content: "";
+      border-top: 2px solid #776fff;
+      position: absolute;
+      top: 50%;
+      margin-left: -3px;
+      top: 24px;
+      left: 23px;
+      width: 80%; }
+    .query-wizard-exp-contents .query-wizard-expension .add-fields-wrappter::after {
+      content: "";
+      width: 0;
+      height: 84px;
+      position: absolute;
+      border: 1px solid #776fff;
+      top: -55px;
+      left: 52px; }
+    .query-wizard-exp-contents .query-wizard-expension .add-fields-wrappter div {
+      z-index: 2; }
+    .query-wizard-exp-contents .query-wizard-expension .add-fields-wrappter .disabled-input {
+      background: #fff;
+      border: 2px solid #776fff;
+      padding: 10px 20px;
+      color: #776fff;
+      border-radius: 35px; }
+
+.query-wizard-div-box {
+  margin-left: 10px !important;
+  margin-right: 10px !important; }
+
+.close-action a {
+  background: #fff;
+  padding: 12px 12px 8px;
+  border: 2px solid #776fff;
+  border-radius: 50px; }
+
+.rule-btn {
+  margin-right: 40px; }
+
+.togleBtn {
+  background: #776fff;
+  border: 2px solid #776fff;
+  padding: 10px;
+  color: #fff;
+  border-radius: 35px; }
+  .togleBtn span {
+    background: #fff;
+    border: 2px solid #fff;
+    padding: 6px;
+    color: #776fff;
+    border-radius: 30px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
